[package]
name = "coffee-loyalty-token"
description = "Coffee loyalty token"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "22.0.1" }
soroban-token-sdk = { version = "22.0.1" }

[dev-dependencies]
soroban-sdk = { version = "22.0.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true